<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">CustomerFeedBack</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_audio_feedback">Create Ticket</string>

    <string name="home_activity">View Tickets</string>
    <string name="speech_prompt">Say something…</string>
    <string name="speech_not_supported">Sorry! Your device doesn\'t support speech input</string>
    <string name="tap_on_mic">Tap on mic to speak</string>
    <string name="tap_on_cam">Tap on cam to attach image</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="welcome_title_one">24x7 Support</string>
    <string name="welcome_caption_one">Our skilled support team will help resolve any technical problem, giving you a clear and simple solution.</string>
    <string name="welcome_title_two">Need Help?</string>
    <string name="welcome_caption_two">Friendly and prompt support you can depend on!</string>
    <string name="welcome_title_three">Have Question?</string>
    <string name="welcome_caption_three">An online ticket system for submitting and tracking your requests</string>
    <string name="welcome_title_four">100% Satisfaction</string>
    <string name="welcome_caption_four">Start submitting question, problem and incident today</string>
    <string name="noTicketsMsg">No Tickets Found In This Category</string>
    <string name="ticket_subject">Subject</string>
    <string name="ticket_priority">Priority:</string>
    <string name="ticket_description">Description</string>
    <string name="ticket_create">Submit</string>
    <string name="title_activity_home">My Tickets</string>

    <string-array name="ticket_priority_value">
        <item>Priority</item>
        <item>Low</item>
        <item>Normal</item>
        <item>High</item>
        <item>Urgent</item>
    </string-array>

    <string name="title_activity_create_issue">CreateIssueActivity</string>
    <string name="log_issue">Log An Issue</string>

</resources>
